day-15/pod-busybox.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: pod-busybox
  namespace: giropops 
spec:
  containers: 
  - name: busybox
    image: cgr.dev/chainguard/busybox
    command: ["sleep","3600"]
    securityContext:
      runAsNonRoot: true
      runAsUser: 1000 #Usuário não root no busybox, pois ele chama a imagem por padrão como root
    resources:
      limits:
        cpu: "500m"
        memory: "512Mi"
      requests:
        cpu: "250m"
        memory: "256Mi"
