day-15/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-pod
  name: nginx-pod
spec:
  containers:
  - image: nginx
    name: nginx-pod
    resources:
      limits:
        cpu: 1 
        memory: 64Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
