day-15/add-label-namespace.yaml
apiVersion: kyverno.io/v1 
kind: ClusterPolicy 
metadata:
  name: add-label-namespace 
spec:
  rules:
  - name: add-label-ns 
    match: 
      resources:
        kinds: 
        - Namespace 
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            Jeferson: "Lindo_Demais"
